[package]
name = "ruplicity-fuse"
version = "0.0.1"
authors = ["mbrt"]
description = "Mount duplicity backups with userspace filesystem"
repository = "https://github.com/mbrt/ruplicity-fuse"
readme = "README.md"
license = "MIT"
keywords = ["duplicity", "backup", "fuse"]

[dependencies]
chan-signal = "0.1"
fuse = "0.2"
libc = "0.2"
log = "0.3"
ruplicity = "0.2"
time = "0.1"
